update: improved responsiveness 2

--- a/src/_layouts/main.njk
+++ b/src/_layouts/main.njk
@@ -20,7 +20,7 @@ menu:
 }
 </style>
 
-<header class="">
+<header class="w3-container">
 	<nav class="w3-bar w3-padding">
 		<img class="w3-left" src={{site.pagelogo}}>
 		<a href="/" class="w3-bar-item w3-btn w3-large hide-micro"><b>{{ site.caption }}</b>
@@ -57,7 +57,7 @@ menu:
 	{% endif %}
 </main>
 
-<footer>
+<footer class="w3-container">
 	<div class="w3-bar">
 		{% for item in menu %}
 			{% if item.bottom %}
