--- a/src/stylesheets.njk
+++ b/src/stylesheets.njk
@@ -5,6 +5,7 @@ permalink: "/static/{{ page.fileSlug | slug }}.css"
 {% include "./_library/main.css" %}
 
 {% include "./_library/colors.css" %}
+{# include "./_library/obsidian.css" #}  {# eigene callout definitionen in layout markdown.njk #}
 {% include "./_library/goodies.css" %}
 
 #versionstring::after {
