--- a/src/_layouts/main.njk
+++ b/src/_layouts/main.njk
@@ -22,7 +22,12 @@ menu:
 
 <header class="w3-container">
 	<nav class="w3-bar w3-padding">
-		<img class="w3-left" src={{site.pagelogo}}>
+		<img class="w3-left" style="margin-top:4px;"
+			 id="pagelogo"
+			 onmouseover="document.getElementById('pagelogo').classList.add('w3-spin');"
+			 onmouseout="document.getElementById('pagelogo').classList.remove('w3-spin');"
+			 src={{site.pagelogo}}>
+
 		<a href="/" class="w3-bar-item w3-btn w3-large hide-micro"><b>{{ site.caption }}</b>
 		<div class="w3-right hide-small" style="line-height:1.8em;">
 			{% for item in menu %}
