--- a/src/_library/main.css
+++ b/src/_library/main.css
@@ -27,6 +27,9 @@ header {
 		width:36px;
 	}
 }
+
+.pagelogo {animation:w3-spin 2s 1 linear}@keyframes w3-spin{0%{transform:rotate(0deg)}100%{transform:rotate(359deg)}}
+
 footer {
 	height: var(--footsize);
 	bottom:0;
