--- a/src/_layouts/main.njk
+++ b/src/_layouts/main.njk
@@ -28,7 +28,7 @@ menu:
 			 onmouseout="document.getElementById('pagelogo').classList.remove('w3-spin');"
 			 src={{site.pagelogo}}>
 
-		<a href="/" class="w3-bar-item w3-btn w3-large hide-micro"><b>{{ site.caption }}</b>
+		<a href="/" class="w3-bar-item w3-btn w3-large hide-micro" style="letter-spacing:4px"><b>{{ site.caption }}</b>
 		<div class="w3-right hide-small" style="line-height:1.8em;">
 			{% for item in menu %}
 				{% if not item.bottom %}
