--- a/src/404.njk
+++ b/src/404.njk
@@ -22,12 +22,11 @@ redirect:
 		z-index:-1;
 		opacity:0.3;
 		object-fit: scale-down;
-		
 	}
 </style>
 	
 <div style="position:relative">
-	<h3 id="target" class="w3-padding w3-center" style="color:#f8fafd;background-color:#4a86d3;font-weight:700;margin-top:0">cc</h3>
+	<h3 id="target" class="w3-padding w3-center" style="color:#f8fafd;background-color:#4a86d3;font-weight:700;margin-top:0">Routing</h3>
 	<div class="w3-image image w3-padding">
 		<img src="{{site.imagedir}}/dragon.png" alt="here are dragons">
 	</div>
